# coursework5_database

./: README.md  pyproject.toml  queries.sql
src/: main.py
src/modules/: database_manager.py  head_hunter_api.py
src/utils/: utils.py
